Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-474: Add an oprtion not to use direct byte buffers. (majakabiljo via ereisman)

  GIRAPH-476: SequenceFileVertexOutputFormat (nitay)

  GIRAPH-409: Refactor / cleanups (nitay)

  GIRAPH-465: MapFunctions cleanup (nitay)

  GIRAPH-464: MasterObserver#applicationFailed callback (nitay)

  GIRAPH-458: split formats module into accumulo,hbase,hcatalog (nitay)

  GIRAPH-463: Create VertexResolver only once (apresta)

  GIRAPH-457: update module names (nitay)

  GIRAPH-455: Add meta information to built jars (nitay)

  GIRAPH-456: Log where master is on every host (nitay)

  GIRAPH-141: Multigraph support in Giraph (apresta)
        
  GIRAPH-452: Fix hcatalog jar (nitay)

  GIRAPH-450: post-review not working after switch to git (nitay)

  GIRAPH-449: License header missing from for-each-profile.sh (apresta)

  GIRAPH-447: Clean up GiraphConfiguration related things (nitay)

  GIRAPH-445: Max message request size in bytes, initialize buffers to 
  expected size (majakabiljo)

  GIRAPH-444: Cleanup VertexResolver (nitay)

  GIRAPH-446: Add a proper timeout for waiting for workers to join a
  superstep. (aching)

  GIRAPH-443: Properly size netty buffers when encoding requests (majakabiljo)

  GIRAPH-395: No need to make HashWorkerPartitioner thread-safe. (aching)

  GIRAPH-441: Keep track of connected channels in NettyServer (majakabiljo)

  GIRAPH-440: ProgressableUtils - TimeoutException from future.get shouldn't 
  be rethrown (majakabiljo)

  GIRAPH-438: When checkpointing is disable, fast fail (aching)

  GIRAPH-437: Missing progress calls when stopping Netty server (majakabiljo)

  GIRAPH-439: Fix naming of input superstep counter (apresta)

  GIRAPH-424: Fix hashCode modulo computation (majakabiljo)

  GIRAPH-396: HcatalogVertexInputFormat outputs a bit too often. (aching)

  GIRAPH-435: Serialize server messages for memory and less GC. (aching)

  GIRAPH-420: build formats in profiles where it works. (nitay)
