@@ -285,22 +285,6 @@ under the License.
                 <goal>single</goal>
               </goals>
             </execution>
-            <execution>
-              <id>make-assembly</id>
-              <!-- this is used for inheritance merges -->
-              <phase>package</phase>
-              <!-- append to the packaging phase. -->
-              <configuration>
-                <!-- Specifies the configuration file of the assembly plugin -->
-                <descriptors>
-                  <descriptor>src/main/assembly/assembly.xml</descriptor>
-                </descriptors>
-                <outputDirectory>target</outputDirectory>
-              </configuration>
-              <goals>
-                <goal>single</goal>
-              </goals>
-            </execution>
           </executions>
         </plugin>
         <plugin>
@@ -333,16 +317,34 @@ under the License.
           </executions>
         </plugin>
         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>2.3.2</version>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>test-jar</goal>
-                    </goals>
-                </execution>
-            </executions>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>2.3.2</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+              </manifest>
+              <manifestEntries>
+                <Build-Jdk>${java.version}</Build-Jdk>
+                <Build-Time>${maven.build.timestamp}</Build-Time>
+                <Git-Commit-Branch>${mvngit.branch}</Git-Commit-Branch>
+                <Git-Commit-Hash>${mvngit.commit.id}</Git-Commit-Hash>
+                <Git-Commit-Date>${mvngit.commit.committer.date}</Git-Commit-Date>
+                <Git-Committer-Email>${mvngit.commit.committer.email}</Git-Committer-Email>
+                <Git-Committer-Name>${mvngit.commit.committer.name}</Git-Committer-Name>
+              </manifestEntries>
+            </archive>
+          </configuration>
+          <executions>
+            <execution>
+              <goals>
+                <goal>jar</goal>
+                <goal>test-jar</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
